--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Especialista em geologia aplicada e geofísica com doutorado avançado em geofísica aplicada. Precursor em soluções baseadas em IA para análise de reservatórios de petróleo e interpretação de dados petrofísicos."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
